gitops/tenants/tenant-sass-common/overlays/qa/authserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authserver-ingress
spec:
  rules:
  - host: authserver-dev.tenark.com
  tls:
  - hosts:
    - authserver-dev.tenark.com
    secretName: keyvault-authserver-ingress-dev
