gitops/tenants/tenant-sass-common/overlays/qa/controlplane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlplane-ingress
spec:
  rules:
  - host: controlplane.dev.tenark.com
  tls:
  - hosts:
    - controlplane.dev.tenark.com
    secretName: keyvault-controlplane-ingress-dev
