gitops/tenants/tenant-sass-common/overlays/qa/httpapi-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpapi-host-ingress
spec:
  rules:
  - host: httpapi-host.dev.tenark.com
  tls:
  - hosts:
    - httpapi-host.dev.tenark.com
    secretName: keyvault-httpapi-host-ingress-dev
